--- a/public/src/pages/request-driver/request-driver.scss
+++ b/public/src/pages/request-driver/request-driver.scss
@@ -1,3 +1,23 @@
 page-request-driver {
+// border : dotted 10px black;
+}
 
+#map {
+    width: 50%;
+    height: 50%;
+    margin-left: 25%;
+}
+
+h1, h2 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
+}
+
+h1 {
+    font-weight: bold;
+    text-decoration: underline
+}
+
+input {
+    margin-left: 45%;
 }
