--- a/public/src/pages/request-driver/request-driver.scss
+++ b/public/src/pages/request-driver/request-driver.scss
@@ -1,21 +1,44 @@
+#formRequest {
+    text-align: center;
+}
 
-    
-    #map {
-        width: 90%;
-        height: 50%;
-        margin-left: 5%;
-    }
-    
-    h1, h2 {
-        text-align: center;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
-    }
-    
-    h1 {
-        font-weight: bold;
-        text-decoration: underline
-    }
-    
-    input {
-        margin-left: 45%;
-    }
+#map {
+    width: 90%;
+    height: 50%;
+    margin-left: 5%;
+}
+
+h1, h2 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
+}
+
+h1 {
+    font-weight: bold;
+    text-decoration: underline
+}
+
+button, input, label, textarea {
+    // margin-left: 45%;
+//     justify-content: flex-start;
+//     align-content: center;
+ }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+#book {
+    margin-bottom: 50px;
+}
+
+label {
+    font-size: large;
+}
